--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
@@ -93,8 +93,15 @@
 
 .inputField-container {
   text-align: start;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   .input-field {
     border-radius: 8px;
   }
+}
+
+.input-field-footer {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
 }
