--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -9,14 +9,14 @@
 
 <ion-content [fullscreen]="true">
   <ion-segment (ionChange)="onSegmentChange($event)" value="0" [scrollable]="true">
-    <ion-segment-button value="0">All</ion-segment-button>
+    <ion-segment-button value="0">Upcoming</ion-segment-button>
     <ion-segment-button value="1">In Session</ion-segment-button>
     <ion-segment-button value="2">Completed</ion-segment-button>
     <ion-segment-button value="3">Incomplete</ion-segment-button>
   </ion-segment>
   <workout-schedule id="0" [hidden]="selectedSegment !== '0'"
-  [categoryName]="''"  
-  [schedules] = "schedules"
+  [categoryName]="'upcoming'"  
+  [schedules] = "upComingSchedules"
   [friends]="friends"
   ></workout-schedule>
 
